# aoc2022

./: Cargo.toml  LICENSE  README.md
benchmark-results/day_five/: index.html
benchmark-results/day_five/iterator/: index.html
benchmark-results/day_four/: index.html
benchmark-results/day_one/: index.html
benchmark-results/day_one/iterator/: index.html
benchmark-results/day_six/: index.html
benchmark-results/day_three/: index.html
benchmark-results/day_two/: index.html
day01/: Cargo.toml
day01/benches/: day01.rs
day01/src/: lib.rs  main.rs
day02/: Cargo.toml
day02/benches/: day02.rs
day02/src/: lib.rs  main.rs
day03/: Cargo.toml
day03/benches/: day03.rs
day03/src/: lib.rs  main.rs
day04/: Cargo.toml
day04/benches/: day04.rs
day04/src/: lib.rs  main.rs
day05/: Cargo.toml
day05/benches/: day05.rs
day05/src/: lib.rs  main.rs
day06/: Cargo.toml
day06/benches/: day06.rs
day06/src/: lib.rs  main.rs
day07/: Cargo.toml
day07/benches/: day07.rs
day07/src/: lib.rs  main.rs
day08/: Cargo.toml
day08/benches/: day08.rs
day08/src/: lib.rs  main.rs
day09/: Cargo.toml
day09/benches/: day09.rs
day09/src/: lib.rs  main.rs
day10/src/: lib.rs  main.rs
day11/: Cargo.toml
day11/src/: lib.rs  main.rs
day12/src/: lib.rs  main.rs
day_one/: Cargo.toml
day_one/benches/: day_one.rs
day_one/src/: lib.rs  main.rs
day_three/: Cargo.toml
day_three/benches/: day_three.rs
day_three/src/: main.rs
day_two/: Cargo.toml
day_two/benches/: day_two.rs
day_two/src/: lib.rs  main.rs
docs/: index.html
(+64 files in other folders)
