[workspace]

members = [
    "day_one",
    "day_two",
]

[workspace.dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
opt-level = 3 # highest level of optimizations applied
lto = true # removes dead code and often provides better optimizations
strip = true # automatically strip symbols from the binary

[profile.bench]
opt-level = 3
lto = true
strip = true
