[workspace]

members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
]

[workspace.dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
opt-level = 3 # highest level of optimizations applied
lto = true # removes dead code and often provides better optimizations
strip = true # automatically strip symbols from the binary

[profile.bench]
opt-level = 3
lto = true
strip = true
